--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "author": "airtoxin <airtoxin@icloud.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
