--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0"
   }
 }
