--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
   "name": "the-crew-solo",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:airtoxin/the-crew-solo.git",
   "author": "airtoxin <airtoxin@icloud.com>",
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "format": "prettier --ignore-path .gitignore --write ."
+    "format": "prettier --ignore-path .gitignore --write .",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "jest": "^26.4.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0"
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   }
 }
