--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"]
+    "lib": ["DOM", "ES2020"],
+    "jsx": "react",
+    "esModuleInterop": true
   }
 }
