--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
