--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "format": "prettier --ignore-path .gitignore --write .",
     "test": "jest"
   },
